--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/Theme.APBD">
         <activity android:name=".Settings"></activity>
         <activity android:name=".LogoutPage" />
-        <activity android:name=".Home" />
+        <activity android:name=".Home"
+            android:parentActivityName=".LoginPage"/>
         <activity android:name=".income" />
         <activity android:name=".history" />
         <activity android:name=".expense" />
@@ -26,7 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginPage">
+        <activity android:name=".LoginPage"
+            android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
