--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -13,12 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.APBD">
-        <activity android:name=".Planning"></activity>
-        <activity android:name=".Settings" />
+        <activity android:name=".Settings"></activity>
         <activity android:name=".LogoutPage" />
-        <activity
-            android:name=".Home"
-            android:parentActivityName=".LoginPage" />
+        <activity android:name=".Home"
+            android:parentActivityName=".LoginPage"/>
         <activity android:name=".income" />
         <activity android:name=".history" />
         <activity android:name=".expense" />
@@ -29,8 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginPage"
+        <activity android:name=".LoginPage"
             android:parentActivityName=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
