--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.APBD">
         <activity android:name=".Planning"></activity>
+        <activity android:name=".customPlanning"></activity>
         <activity android:name=".Settings" />
         <activity android:name=".LogoutPage" />
         <activity
