--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -4,8 +4,6 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <uses-feature android:name="android.hardware.type.watch" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,8 +11,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.APBD">
-        <activity android:name=".Planning"></activity>
-        <activity android:name=".customPlanning"></activity>
+        <receiver
+            android:name=".AirplaneReciever"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+            <action android:name="android.intent.action.AIRPLANE_MODE"/>
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".Planning" />
+        <activity android:name=".customPlanning" />
         <activity android:name=".Settings" />
         <activity android:name=".LogoutPage" />
         <activity
@@ -31,7 +38,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Regispage" />
-        <activity android:name=".LoginPage"/>
+        <activity android:name=".LoginPage" />
     </application>
 
 </manifest>
