--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -13,8 +13,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.APBD">
-        <activity android:name=".Planning"></activity>
-        <activity android:name=".customPlanning"></activity>
+        <service
+            android:name=".SendDataMailService"
+            android:enabled="true"
+            android:exported="true"></service>
+        <service
+            android:name=".ExportDataService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".Planning" />
+        <activity android:name=".customPlanning" />
         <activity android:name=".Settings" />
         <activity android:name=".LogoutPage" />
         <activity
@@ -31,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Regispage" />
-        <activity android:name=".LoginPage"/>
+        <activity android:name=".LoginPage" />
     </application>
 
 </manifest>
