--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <uses-feature android:name="android.hardware.type.watch" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -38,6 +37,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Regispage" />
+        <activity android:name=".ConfirmRegis"/>
         <activity android:name=".LoginPage" />
     </application>
 
