RESTORE: BAlekkan punya dosen

--- a/APBD/app/build.gradle
+++ b/APBD/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
 
     implementation 'com.loopj.android:android-async-http:1.4.11'
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'org.jetbrains.anko:anko-common:0.10.8'
+//    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 }
