--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
         android:allowBackup="true"
@@ -14,10 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.APBD">
+
+        <activity
+            android:name=".ActivityDetail"
+            android:parentActivityName=".Home">
+        </activity>
+
         <receiver
             android:name=".MyReceiverAlarm"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true" />
 
         <activity android:name=".Memes" />
 
@@ -51,9 +58,7 @@
 
         <activity android:name=".Planning" />
         <activity android:name=".customPlanning" />
-        <activity android:name=".Settings"
-            android:parentActivityName=".Home"/>
-
+        <activity android:name=".Settings" />
         <activity android:name=".LogoutPage" />
         <activity
             android:name=".Home"
