--- a/APBD/app/src/main/AndroidManifest.xml
+++ b/APBD/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <application
         android:allowBackup="true"
@@ -15,11 +15,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.APBD">
-
+        <activity android:name=".calculate"></activity>
         <activity
             android:name=".ActivityDetail"
-            android:parentActivityName=".Home">
-        </activity>
+            android:parentActivityName=".Home"></activity>
 
         <receiver
             android:name=".MyReceiverAlarm"
@@ -58,8 +57,9 @@
 
         <activity android:name=".Planning" />
         <activity android:name=".customPlanning" />
-        <activity android:name=".Settings"
-            android:parentActivityName=".Home"/>
+        <activity
+            android:name=".Settings"
+            android:parentActivityName=".Home" />
         <activity android:name=".LogoutPage" />
         <activity
             android:name=".Home"
