--- a/APBD/app2/build.gradle
+++ b/APBD/app2/build.gradle
@@ -1,7 +1,10 @@
-plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-}
+apply plugin: 'com.android.application'
+
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -30,6 +33,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    androidExtensions{
+        experimental = true
+    }
 }
 
 dependencies {
@@ -42,4 +48,11 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'org.jetbrains.anko:anko-common:0.9'
+    implementation 'org.jetbrains.anko:anko-common:0.10.8'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    implementation 'com.loopj.android:android-async-http:1.4.11'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    testImplementation 'org.mockito:mockito-inline:3.3.0'
 }
