--- a/APBD/app/build.gradle
+++ b/APBD/app/build.gradle
@@ -36,6 +36,9 @@ android {
     androidExtensions{
         experimental = true
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
