--- a/APBD/app/build.gradle
+++ b/APBD/app/build.gradle
@@ -44,6 +44,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-ads:20.1.0'
     def room_version ="2.3.0"
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
